Fix css product search box

--- a/assets/scss/_woo-search-tool.scss
+++ b/assets/scss/_woo-search-tool.scss
@@ -2,7 +2,7 @@
   position: fixed;
   visibility: hidden;
   opacity: 0;
-  z-index: 99999;
+  z-index: 9999999;
   font-family: 'Poppins', sans-serif;
   &:after{
     content: "";
