--- a/assets/scss/_medium-editor-theme.scss
+++ b/assets/scss/_medium-editor-theme.scss
@@ -30,7 +30,7 @@ $medium-editor-placeholder-color: #f8f5f3;
     background-color: $medium-editor-bgcolor;
     border: none;
     border-radius: $medium-editor-border-radius;
-    z-index: 9999 !important;
+    z-index: 9999999 !important;
     li {
         button {
             background-color: transparent;
@@ -121,7 +121,7 @@ $medium-editor-placeholder-color: #f8f5f3;
 }
 
 .medium-editor-anchor-preview {
-  z-index: 9999 !important;
+  z-index: 9999999 !important;
   a {
     font-size: 11px;
     color: $medium-editor-link-color;
